Fixed alignments

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -178,6 +178,15 @@ h15 {
   color: #000000;
 }
 
+h16 {
+  font-size: 3.5em;
+  letter-spacing: -2px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+  text-align: center;
+
+}
 ul.pagination li {display: inline;}
 
 ul.pagination li a {
